@@ -1,6 +1,7 @@
 2025-01-31  Marc Glisse <marc.glisse@inria.fr>
 
 	* demos/calc/calc.y (yylex, yyerror): Declare.
+	* printf/repl-vsnprintf.c (__gmp_replacement_vsnprintf): Handle %a.
 
 2025-01-29  Albin Ahlbäck <albin.ahlback@gmail.com>
 	    Marc Glisse <marc.glisse@inria.fr>
